Fix T41971: BMesh mapping slot arg error